# naengboo

./: README.md  app.py  config.py  manage.py  naengboo.py  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: default-issue-template.md
.github/PULL_REQUEST_TEMPLATE/: default-pr-template.md
api/: app.py
api/views/: refrigerators.py
app/: __init__.py  extensions.py
app/daos/: base_dao.py  ingredients_dao.py
app/database/: __init__.py  models.py
app/views/: __init__.py  recipes.py  refrigerators.py  user.py
database/: __init__.py  models.py
database/daos/: ingredients_dao.py
test/: __init__.py  app_test.py  conftest.py
test/mock/: __init__.py
test/mock/data/: test.json
test/mock_data/: test.json
test/views/: Ingredients_test.py  test_refrigerators.py
test/views/params/: ingredients_params.py  refrigerators_params.py
utils/: dotenv.py  test_utils.py
views/: refrigerators.py
