[tool.poetry]
name = "naengboo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
flask-restx = "^0.4.0"
Flask = "<2.0.0"
python-dotenv = "^0.17.1"
pymongo = "^3.11.4"
mongomock = "^3.22.1"
pytest = "^6.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
